# packages/app/src/routes.ts
@@ -26,6 +26,17 @@ const models: TsoaRoute.Models = {
         },
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    LoginBody: {
+        dataType: 'refAlias',
+        type: {
+            dataType: 'nestedObjectLiteral',
+            nestedProperties: {
+                handle: { dataType: 'string', required: true },
+            },
+            validators: {},
+        },
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     LogoutResponse: {
         dataType: 'refAlias',
         type: {
@@ -282,6 +293,7 @@ export function RegisterRoutes(app: Router) {
                 required: true,
                 dataType: 'object',
             },
+            undefined: { in: 'body', required: true, ref: 'LoginBody' },
         }
     app.post(
         '/oauth/login',
