# packages/app/src/swagger.json
@@ -18,6 +18,17 @@
 				],
 				"type": "object"
 			},
+			"LoginBody": {
+				"properties": {
+					"handle": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"handle"
+				],
+				"type": "object"
+			},
 			"LogoutResponse": {
 				"properties": {
 					"message": {
@@ -443,7 +454,7 @@
 	},
 	"info": {
 		"title": "@niknak/app",
-		"version": "0.0.11",
+		"version": "0.0.13",
 		"contact": {}
 	},
 	"paths": {
@@ -463,7 +474,17 @@
 					}
 				},
 				"security": [],
-				"parameters": []
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/LoginBody"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/oauth/callback": {
